hphp/test/slow/object_property/704.php.expectf
HipHop Fatal error: Cannot access property started with '\\0' in %s/hphp/test/slow/object_property/704.php on line 3
